plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.141'
}

version = mod_version
group = mod_group_id

repositories {
    mavenCentral()
    maven {
        url "https://cursemaven.com"
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG

            // Plain Java libraries used by the mod need to be present on the dev run classpath as well.
            getAdditionalRuntimeClasspathConfiguration().dependencies.add(
                    project.dependencies.create("com.belerweb:pinyin4j:2.5.1")
            )
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }


dependencies {
    implementation "com.belerweb:pinyin4j:2.5.1"
    jarJar "com.belerweb:pinyin4j:2.5.1"

    implementation "curse.maven:emi-580555:6420931"
    implementation "curse.maven:jei-238222:7420587"
    runtimeOnly "curse.maven:ae2-jei-integration-1074338:7727898"
    implementation "curse.maven:jade-324717:7545219"

    implementation "curse.maven:guideme-1173950:7127444"
    implementation "curse.maven:applied-energistics-2-223794:7027323"


    implementation "curse.maven:glodium-957920:5821676"
    implementation "curse.maven:ex-pattern-provider-892005:8025439"

    implementation "curse.maven:geckolib-388172:7707149"
    implementation "curse.maven:advancedae-1084104:7849217"

    compileOnly "curse.maven:ae2-crystal-science-1435174:8036407"
    runtimeOnly "curse.maven:ae2-crystal-science-1435174:8036407"
    implementation "curse.maven:ae2-lightning-tech-1527395:8036157"

    implementation "curse.maven:applied-energistics-2-wireless-terminals-459929:7693114"
    compileOnly files(".codex_tmp_wtlib/META-INF/jarjar/de.mari_023.ae2wtlib_api-19.4.1.jar")

    implementation "curse.maven:ldlib-626676:8030336"
    implementation "curse.maven:neo-eco-ae-extension-1460639:7884362"


    compileOnly "curse.maven:extendedae-plus-1337639:7960385"
    runtimeOnly "curse.maven:extendedae-plus-1337639:7960385"

    implementation "curse.maven:applied-flux-965012:7429565"

    implementation "curse.maven:applied-pneumatics-1355087:7723695"
    implementation "curse.maven:pneumaticcraft-repressurized-281849:7830507"

    implementation "curse.maven:applied-create-1474758:7945860"
    implementation "curse.maven:kotlin-for-forge-351264:7471280"
    implementation "curse.maven:create-328085:7963363"

    implementation "curse.maven:mega-cells-622112:7952621"
    implementation "curse.maven:cloth-config-348521:5729127"

    implementation "curse.maven:mekanism-268560:7904058"
    implementation "curse.maven:applied-mekanistics-574300:7096962"


    // Example mod dependency using a mod jar from ./libs with a flat dir repository
    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
    // The group id is ignored when searching -- in this case, it is "blank"
    // implementation "blank:coolmod-${mc_version}:${coolmod_version}"

    // Example mod dependency using a file as dependency
    // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")

    // Example project dependency using a sister or child project:
    // implementation project(":myproject")

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
